--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header id="pn">
-        <h2 class="lion">M.Kaif</h2>
+        <h2 class="lion">Muhammad Dayyan</h2>
         <nav>
             <ul id="logo1">
                 <li id="logo2">
